# transformers-demo

./: README.md  pyproject.toml  requirements.txt
src/chapter1/: lesson3.py
src/chapter1/lesson3/: fill_mask_task.py  ner_task.py  roleplay_task.py  sentiment_analysis_task.py  text_generation_task.py  translation_task.py
src/transformers_demo/chapter1/: lesson3.py
